[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.6.0",
    "pandas==2.2.2",
    "safetensors==0.4.3",
    "scikit-learn==1.6.1",
    "tiktoken==0.7.0",
    "torch==2.4.0",
    "transformers==4.55.4",
    "trl==0.22.2",
    "unsloth==2025.9.2",
]
