[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.6.0",
    "graphviz>=0.21",
    "importnb>=2023.11.1",
    "ipynb>=0.5.1",
    "pandas==2.2.2",
    "safetensors==0.4.3",
    "scikit-learn==1.6.1",
    "tensorflow>=2.15.0",
    "tiktoken==0.7.0",
    "torch==2.4.0",
    "torchshow>=0.5.2",
    "torchview>=0.2.7",
    "tqdm>=4.66",
    "transformers==4.55.4",
    "trl==0.22.2",
    "unsloth==2025.9.2",
]
